end-to-end working

--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "prisma:migrate": "npx prisma migrate dev",
     "mobile:build:android:dev": "DEBUG=* cd apps/mobile && eas build --profile preview --platform android",
     "mobile:build:ios:dev": "DEBUG=* cd apps/mobile && rm -rf ios && eas build --profile preview --platform ios",
-    "mobile:clean": "cd apps/mobile && expo prebuild --clean"
+    "mobile:clean": "cd apps/mobile && expo prebuild --clean",
+    "gqty:generate": "gqty generate",
+    "graphql:codegen": "graphql-codegen --config codegen.yml"
   },
   "private": true,
   "dependencies": {
     "@expo/metro-config": "0.3.17",
+    "@gqty/react": "^3.0.0-alpha-74109b4.0",
     "@graphql-yoga/node": "^2.13.6",
     "@hookform/resolvers": "^2.9.6",
     "@pothos/core": "^3.13.0",
@@ -24,10 +27,12 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "@tanstack/react-query": "^4.0.10",
     "@trpc/client": "^9.25.3",
     "@trpc/next": "^9.25.3",
     "@trpc/react": "^9.25.3",
     "@trpc/server": "^9.25.3",
+    "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "expo": "45.0.5",
@@ -38,7 +43,10 @@
     "expo-structured-headers": "~2.2.1",
     "expo-updates": "~0.13.3",
     "expo-web-browser": "^10.2.1",
+    "gqty": "^2.3.0",
     "graphql": "^16.5.0",
+    "graphql-request": "^4.3.0",
+    "graphql-tag": "^2.12.6",
     "native-base": "^3.4.7",
     "next": "^12.1.6",
     "node-fetch": "2",
@@ -53,7 +61,7 @@
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "1.0.0",
     "react-native-web": "0.17.7",
-    "react-query": "^3.39.1",
+    "react-query": "^4.0.0",
     "regenerator-runtime": "0.13.7",
     "solito": "^0.0.26",
     "superjson": "^1.9.1",
@@ -61,6 +69,14 @@
     "zod": "^3.17.10"
   },
   "devDependencies": {
+    "@boost/module": "^3.1.0",
+    "@gqty/cli": "^3.3.1-alpha-74109b4.0",
+    "@graphql-codegen/add": "^3.2.1",
+    "@graphql-codegen/cli": "2.11.5",
+    "@graphql-codegen/introspection": "2.2.1",
+    "@graphql-codegen/typescript": "2.7.3",
+    "@graphql-codegen/typescript-operations": "2.5.3",
+    "@graphql-codegen/typescript-react-query": "^4.0.1",
     "@nrwl/cli": "14.3.6",
     "@nrwl/cypress": "14.3.6",
     "@nrwl/detox": "14.3.6",
