--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -43,7 +43,11 @@
     "reactotron-react-native": "*",
     "@react-native-async-storage/async-storage": "*",
     "react-hook-form": "*",
-    "@hookform/resolvers": "*"
+    "@hookform/resolvers": "*",
+    "graphql-request": "*",
+    "@tanstack/react-query": "*",
+    "graphql-tag": "*",
+    "axios": "*"
   },
   "scripts": {
     "eas-build-pre-install": "cd ../../ && cp yarn.lock ./apps/mobile/ && echo $GOOGLE_SERVICES_BASE64 && echo $GOOGLE_SERVICES_BASE64 | base64 --decode > ./apps/mobile/google-services.json && cat ./apps/mobile/google-services.json && echo $GOOGLE_SERVICE_INFO_PLIST && echo $GOOGLE_SERVICE_INFO_PLIST | base64 --decode > ./apps/mobile/GoogleService-Info.plist && cat ./apps/mobile/GoogleService-Info.plist ",
