add and remove working

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -49,7 +49,8 @@
     "graphql-tag": "*",
     "axios": "*",
     "urql": "*",
-    "@graphql-codegen/gql-tag-operations-preset": "*"
+    "@graphql-codegen/gql-tag-operations-preset": "*",
+    "@urql/exchange-graphcache": "*"
   },
   "scripts": {
     "eas-build-pre-install": "cd ../../ && cp yarn.lock ./apps/mobile/ && echo $GOOGLE_SERVICES_BASE64 && echo $GOOGLE_SERVICES_BASE64 | base64 --decode > ./apps/mobile/google-services.json && cat ./apps/mobile/google-services.json && echo $GOOGLE_SERVICE_INFO_PLIST && echo $GOOGLE_SERVICE_INFO_PLIST | base64 --decode > ./apps/mobile/GoogleService-Info.plist && cat ./apps/mobile/GoogleService-Info.plist ",
