--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@trpc/react": "^9.25.3",
     "@trpc/server": "^9.25.3",
     "@urql/core": "^2.6.1",
+    "@urql/exchange-graphcache": "^5.0.0",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
